# EvidentaFiscala

./: .gitignore  CMakeLists.txt  ContentView.qml  CustomDmg.json  DEVELOPMENT.md  IncomeView.qml  Info.plist  README.md  build-linux-release.sh  build-macos-release.sh  build-win-release.bat  gen_icns.sh  main.cpp  main.qml  qml.qrc  tablemodel.cpp  tablemodel.h
.github/: FUNDING.yml
cmake/: internal_utils.cmake  linux-utils.cmake  linux.cmake  macos.cmake  windows.cmake
data/: ledger_2025_sample.csv
debian/: FiscalRecords.desktop.cmake  cleanup_qt.cmake  gen_icons.sh  postinst  postrm
img/: FiscalRecords.icns  app.rc
langs/: en.ts  fr.ts  ro.ts
pfa_fiscal/: SKILL.md
qml/: AboutDialog.qml  ContentView.qml  ContextMenu.qml  DatePicker.qml  IncomeView.qml  IncomeViewWithBars.qml  IncomeViewWithLines.qml  LabelComboBox.qml  LabelTextField.qml  LabelTextFieldBrowser.qml  Settings.qml  SuggestionPopup.qml  Theme.qml  main.qml
src/: config.h.cmake  git_client.cpp  git_client.h  main.cpp  rest_client.cpp  rest_client.h  settings.cpp  settings.h  similarity_score.cpp  similarity_score.h  table_model.cpp  table_model.h  tablemodel.cpp  tablemodel.h  ui_controller.cpp  ui_controller.h
